# Programming-SOPs

./: .buildinfo  .readthedocs.yaml  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/code/: deploying_code.doctree  documentation.doctree  file_structure.doctree  testing_code.doctree  toolkit.doctree
.doctrees/git/: creating_a_new_project.doctree  grab_existing_project.doctree  index.doctree
.doctrees/hardware/: driverstation.doctree  index.doctree
.doctrees/initial setup/: index.doctree
.doctrees/installation/: index.doctree
.doctrees/introduction/: index.doctree
.doctrees/networks/: networktables.doctree
.doctrees/poetry/: index.doctree
.github/workflows/: sphinx-build-with-plantuml.yml  sphinx-build.yml
_images/: graphviz-200a82daa98d107fe4a4299bfc3e208650a95930.png.map
_sources/: index.rst.txt
_sources/code/: pid.rst.txt  (+5 more)
_static/: yri_icon.jfif
code/: arm.html  creating_command.html  creating_subsystem.html  deploying_code.html  documentation.html  file_structure.html  odometry.html  pid.html  swerve.html  testing_code.html  toolkit.html  trajectory.html  vision.html
control_systems/: pid.html  profiled_pid.html
docs/: conf.py  index.rst  requirements.txt
git/: creating_a_new_project.html  github_actions.html  grab_existing_project.html  index.html
hardware/: driverstation.html  index.html
initial setup/: index.html
installation/: index.html
introduction/: index.html
networks/: networktables.html
poetry/: index.html
(+126 files in other folders)
