[tool.poetry]
name = "programming-sops"
version = "0.1.0"
description = "Programming Standard Operating Procedure"
authors = ["Inspirol <91295122+Inspirol@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "programming_sops"}]

[tool.poetry.dependencies]
python = "^3.11"
Sphinx = "^7.1.1"
myst-parser = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
